# mapproxy

./: .appveyor.yml  .gitignore  .gitignore~  .hgignore  .hgtags  .travis.yml  AUTHORS.txt  CHANGES.txt  COPYING.txt  DEVELOPMENT.md  Dockerfile  Dockerfile-alpine  MANIFEST.in  Makefile  README.md  README.rst  README.txt  RELEASE.txt  config-schema.json  config-schema.md  docker-compose.yaml  index.html  pylint.ini  pyproject.toml  pytest.ini  release.py  requirements-appveyor.txt  requirements-tests.txt  requirements-travis.txt  requirements.txt  setup.cfg  setup.py  tox.ini
.github/: ISSUE_TEMPLATE.md  dependabot.yml  pull_request_template.md
0.8.3/: configuration.html  configuration_examples.html  deployment.html  development.html  index.html  searchindex.js
0.8.4/: deployment.html  development.html  index.html  install.html  install_windows.html  searchindex.js  services.html
0.9.0/: configuration_examples.html  deployment.html  genindex.html  index.html  install_windows.html  migrate.html  services.html
0.9.1/: configuration_examples.html  coverages.html  install_windows.html  migrate.html  search.html  sources.html
1.10.0/: .buildinfo  auth.html  configuration_examples.html  coverages.html  deployment.html  development.html  genindex.html  inspire.html  install.html  install_windows.html  labeling.html  mapproxy_2.html  mapproxy_util.html  seed.html  sources.html
1.10.1/: deployment.html  development.html  genindex.html  inspire.html  install_osgeo4w.html  install_windows.html  mapproxy_util.html  mapproxy_util_autoconfig.html  services.html
(+1952 files in other folders)
