[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.mypy]
disable_error_code = ["import-untyped", "import-not-found"]

[[tool.mypy.overrides]]
module = [
    "mapproxy.util.ext.*",
    "mapproxy.test.*"
]
ignore_errors = true

[tool.pytest.ini_options]
addopts = "--doctest-modules"
markers = [
  "online: marks tests that require a working internet connection (deselect with '-m \"not online\"')"
]

[tool.flake8]
exclude = [".git", ".idea", "build", "dist", "MapProxy.egg-info"]
max-line-length = 120
extend-ignore = ["E128"]

[tool.coverage.run]
source = [
    "mapproxy"
]
omit = [
    "mapproxy/test/*"
]